# luau

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  scraps.py  setup.py
finetune_ppo/: train_finetune_ppo.py
hyperparams/: iaappo-locked-env.yaml  ppo-iaa-env-locked-config.yaml  ppo-iaa-env-unlocked-config.yaml  ppo-locked-env.yaml  ppo-unlocked-env.yaml
introspective_ppo/: IntrospectiveEnv.py  introspection.py  introspective_ppo.py  train-introspective-ppo.py
introspective_ppo/PPO_logs/Small-Door-Room-Locked-Student/: PPO_Small-Door-Room-Locked-Student_log_0.csv  PPO_Small-Door-Room-Locked-Student_log_1.csv  PPO_Small-Door-Room-Locked-Student_log_2.csv
luau/: aa_ppo.py  ac_dqn.py  diaa.py  diaa_sac_continuous.py  divaa.py  dqn.py  eerd.py  evaluate.py  finetune_ppo.py  iaa.py  iaa_dqn.py  iaa_env.py  iaa_sac_continuous.py  iaa_single_env.py  inference  inference.py  multi_room_env.py  no_frills_iaa_ppo.py  no_frills_ppo.py  no_frills_ppo_single.py  pixel_sac.py  plotting_example.py  ppo.py  refactor_no_frills_iaa_ppo.py  run.sh  run_ablation.sh  run_baseline.sh  run_bipedal.sh  run_evaluate.sh  run_lunar_ablation.sh  sac.py  sac_continuous.py  sac_continuous_pixels.py  sac_diaa.py  sac_finetune.py  sac_iaa.py  sac_siaa.py  sac_tgrl.py  sac_torch_compile_pixels.py  sac_torchcompile.py  (+13 more)
luau/analysis/: ablation.py  action_dist.py  learning_curves.py  te_table.py  thresholds.py
luau/driving-envs/: evaluate.py  inference.py  run.sh  run_ablation.sh  run_baseline.sh  run_evaluate.sh  sac_diaa.py  sac_finetune.py  sac_iaa.py  sac_torchcompile.py  straight_road.py
luau/driving_envs/: __init__.py  straight_road.py
nautilus/: Dockerfile  baseline_run.sh  diaa_run.sh  dqn_run.sh  eerd_run.sh  finetune_run.sh  gitlab-ci.yml  iaa_env.yaml  iaa_run.sh  job.yaml  pod.yaml  poetry.sh  run_baseline.sh  run_baseline_experiment.sh  run_experiment.sh  setup.sh  target-task1-suboptimal.sh  target3_run.sh
ppo/: inference.py  ppo.py  train.py
ppo/PPO_logs/Small-Door-Room-Locked-Baseline/: PPO_Small-Door-Room-Locked-Baseline_log_0.csv
ppo/PPO_logs/Small-Door-Room-Locked-Finetune/: PPO_Small-Door-Room-Locked-Finetune_log_0.csv
tasks/: __init__.py  checks.py  setup.py
tests/: conftest.py  iaa_env_test.py  iaappo_test.py  iaappo_trainer_test.py  ppo_test.py  ppo_trainer_test.py  trainer_test.py
tests/test_configs/: test_config.yaml  test_iaappo_config.yaml  test_ppo_config.yaml
(+6 files in other folders)
