[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "luau"
version = "0.1.0"
description = "Latent Unified Adaptive Upskilling"
authors = ["Oliver Chang"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"
coverage = "^7.5.1"
invoke = "^2.2.0"
beautifulsoup4 = "^4.12.3"
pre-commit = "^3.7.1"
ipykernel = "^6.29.4"
torch = "^2.2.2"
torchaudio = "^2.2.2"
torchvision = "^0.17.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-image = "^0.23.2"
minigrid = "^2.3.1"

[tool.coverage.run]
branch = true
omit = ["tests/conftest.py"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "skipci(reason): marks tests to skip in ci (deselect with '-m \"not skipci\"')",
]
